--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-dev-server": "^4.9.0",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
@@ -43,6 +44,7 @@
     "lit-html": "^2.2.3",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
-    "tsconfig-paths": "^4.0.0"
+    "tsconfig-paths": "^4.0.0",
+    "workbox-precaching": "^6.5.3"
   }
 }
